<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="CE">CE</string>
    <string name="Open">(</string>
    <string name="Close">)</string>
    <string name="Div">/</string>
    <string name="Mul">*</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="Equal">=</string>
    <string name="Back">B</string>
</resources>
