<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tvExpression"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:textColor="@color/numberButton"
            android:gravity="end"
            android:ellipsize="start"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:singleLine="true"/>
    <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:textColor="@color/numberButton"
            android:gravity="end"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tvCe"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/CE"/>
            <TextView
                    android:id="@+id/tvOpen"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Open"/>
            <TextView
                    android:id="@+id/tvClose"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Close"/>
            <TextView
                    android:id="@+id/tvDiv"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Div"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/tvSeven"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/seven"/>
            <TextView
                    android:id="@+id/tvEight"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/eight"/>
            <TextView
                    android:id="@+id/tvNine"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/nine"/>
            <TextView
                    android:id="@+id/tvMul"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Mul"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/tvFour"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/four"/>
            <TextView
                    android:id="@+id/tvFive"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/five"/>
            <TextView
                    android:id="@+id/tvSix"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/six"/>
            <TextView
                    android:id="@+id/tvMinus"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Minus"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/tvOne"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/one"/>
            <TextView
                    android:id="@+id/tvTwo"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/two"/>
            <TextView
                    android:id="@+id/tvThree"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/three"/>
            <TextView
                    android:id="@+id/tvPlues"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/Plus"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                android:id="@+id/tvDot"
                style="@style/NumberButtonStyle"
                android:background="@drawable/ripple_effect_raised"
                android:text="."/>
            <TextView
                    android:id="@+id/tvZero"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/ripple_effect_raised"
                    android:text="@string/zero"/>
            <ImageView
                android:id="@+id/tvBack"
                style="@style/NumberButtonStyle"
                android:background="@drawable/ripple_effect_raised"
                android:scaleType="center"
                android:src="@drawable/baseline_backspace_white_18dp"/>
            <TextView
                android:id="@+id/tvEquals"
                style="@style/ActionButtonStyle"
                android:background="@drawable/ripple_effect_raised"
                android:text="@string/Equal"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>